--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p>📞 Phone: +91-XXXXXXXXXX</p>
-    <p>📱 WhatsApp: +91-XXXXXXXXXX</p>
-    <p>📧 Email: yourname@example.com</p>
+    <p>📞 Phone: +919322335235</p>
+    <p>📱 WhatsApp: +919322335236</p>
+    <p>📧 Email:kavitashukla1059@gmail.com</p>
     <button class="btn">Book Us for Event</button>
   </section>
 
