--- a/index.html
+++ b/index.html
@@ -32,19 +32,23 @@
       <li>🎵 Kirtan & Satsang</li>
       <li>🙏 Special Event Performances</li>
       <li>🌸 Religious Gatherings</li>
+      <li>🎵 Mata ki chouki</li>
+      <li>🌸 Shivcharcha</li>
+      <li>🎵 Awasani maata pooja</li>
+      <li>🙏🏻 Sundarkand</li>
     </ul>
   </section>
 
   <section id="gallery" class="gallery">
     <h2>Gallery</h2>
     <p>(Add your photos here)</p>
-    <img src="images/krishna.jpg" alt="Lord Krishna">
+    <img src="Krishna.jpg" alt="Background.jpg">
   </section>
 
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>📞 Phone: +919322335235</p>
-    <p>📱 WhatsApp: +919322335236</p>
+    <p>📱 WhatsApp: +919322335235</p>
     <p>📧 Email:kavitashukla1059@gmail.com</p>
     <button class="btn">Book Us for Event</button>
   </section>
