--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
   <section id="gallery" class="gallery">
     <h2>Gallery</h2>
-    <p>(Add your photos here)</p>
+    <p></p>
     <img src="Krishna.jpg" alt="Background.jpg">
+    <img src="Background.jpg" alt="Background.jpg">
   </section>
 
   <section id="contact" class="contact">
