--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
     <p>📱 WhatsApp: +919322335235</p>
     <p>📧 Email:kavitashukla1059@gmail.com</p>
     <button class="btn">Book Us for Event</button>
+    <!-- Event Booking Form for Shri Krishna Bhajan Mandli -->
+<div style="max-width:400px; margin:auto; padding:20px; border:1px solid #ccc; border-radius:10px; background-color:#f9f9f9;">
+  <h2 style="text-align:center; color:#4a148c;">Book Your Event</h2>
+  <form action="submit_form.php" method="POST">
+    <label for="name" style="font-weight:bold;">Name:</label><br>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required style="width:100%; padding:8px; margin:8px 0; border-radius:5px; border:1px solid #ccc;"><br>
+
+    <label for="phone" style="font-weight:bold;">Phone Number:</label><br>
+    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required style="width:100%; padding:8px; margin:8px 0; border-radius:5px; border:1px solid #ccc;"><br>
+
+    <label for="event" style="font-weight:bold;">Event:</label><br>
+    <input type="text" id="event" name="event" placeholder="Enter event name" required style="width:100%; padding:8px; margin:8px 0; border-radius:5px; border:1px solid #ccc;"><br>
+
+    <button type="submit" style="width:100%; padding:10px; background-color:#4a148c; color:white; border:none; border-radius:5px; font-size:16px;">Book Event</button>
+  </form>
+</div>
   </section>
 
   <footer>
