--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <input type="tel" id="phone" name="phone" required placeholder="Enter phone number" style="width:100%; padding:10px; margin-bottom:12px; border-radius:8px; border:1px solid #ccc;"><br>
 
       <label for="event">Event:</label><br>
-      <input type="text" id="event" name="event" required placeholder="Enter event name" style="width:100%; padding:10px; margin-bottom:12px; border-radius:8px; border:1px solid #ccc;"><br>
+      <input type="text" id="event" name="event" required placeholder="Enter event name" value="Bhajan" style="width:100%; padding:10px; margin-bottom:12px; border-radius:8px; border:1px solid #ccc;"><br>
 
       <label for="category">Category:</label><br>
       <select id="category" name="category" required style="width:100%; padding:10px; margin-bottom:15px; border-radius:8px; border:1px solid #ccc;">
@@ -115,7 +115,7 @@
     const category = document.getElementById('category').value;
 
     const message = `Booking Request:%0AName: ${name}%0APhone: ${phone}%0AEvent: ${eventName}%0ACategory: ${category}`;
-    const whatsappNumber = 'YOUR_WHATSAPP_NUMBER'; // Replace with your number e.g., 919876543210
+    const whatsappNumber = '919322335235'; // ✅ Aapka WhatsApp number
 
     window.open(`https://wa.me/${whatsappNumber}?text=${message}`, '_blank');
     modal.style.display = 'none';
@@ -141,8 +141,8 @@
     from {opacity:0; transform:translateY(-20px);}
     to {opacity:1; transform:translateY(0);}
   }
-</style>
-        
+        </style>
+    
 
   <footer>
     <p>© 2025 Shri Krishna Bhajan Mandli | All Rights Reserved</p>
