--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <span id="closeModal" style="position:absolute; top:10px; right:15px; cursor:pointer; font-weight:bold; font-size:22px; color:#ffcc00;">&times;</span>
     
     <div style="text-align:center; margin-bottom:20px; background:rgba(255,255,255,0.7); padding:10px; border-radius:12px;">
-      <img src="https://i.ibb.co/vdY7m6H/flute-icon.png" alt="Krishna Flute" style="width:50px; margin-bottom:10px;">
+      <img src="Flute.jpg" alt="Krishna Flute" style="width:50px; margin-bottom:10px;">
       <h2 style="color:#ff6600; margin:0;">Shri Krishna Bhajan Mandli</h2>
       <p style="color:#555;">Book Your Event with Us</p>
     </div>
