--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
        With melodious voices and soulful performance, we create a spiritual atmosphere that fills hearts with devotion and peace. 
        We perform at temples, homes, religious events, and cultural functions to spread the eternal message of Lord Krishna.</p>
   </section>
+  <section id="about">
+    <h2>About Us</h2>
+    <p>श्री कृष्ण भजन मंडली - भावपूर्ण भजनों, कीर्तनों, सत्संगों और आध्यात्मिक समागमों के माध्यम से भगवान कृष्ण के दिव्य संदेश के प्रसार हेतु समर्पित एक भक्ति समूह। भारत भर में विभिन्न आयोजनों, समारोहों और धार्मिक कार्यक्रमों के लिए उपलब्ध।</p>
+  </section>
 
   <section id="services" class="services">
     <h2>Our Services</h2>
