--- a/index.html
+++ b/index.html
@@ -3,186 +3,154 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shri Krishna Bhajan Mandli - Vasai Nalasopara Maharashtra</title>
-  <meta name="description" content="Shri Krishna Bhajan Mandli – A devotional group from Vasai Nalasopara, Maharashtra. Available for Bhajan Sandhya, Kirtan, Satsang, Mata ki Chouki, Shivcharcha, Sundarkand, and spiritual gatherings across India. Contact: +919322335235">
-  <meta name="keywords" content="Vasai Bhajan Mandali, Nalasopara Bhajan Mandali, Shri Krishna Bhajan Mandli Maharashtra, Bhajan Sandhya Vasai, Kirtan Satsang Maharashtra, Mata ki Chouki Vasai Nalasopara, Sundarkand Vasai">
-  <meta name="author" content="Shri Krishna Bhajan Mandli">
-  <link rel="canonical" href="https://yourwebsite.com/vasai-nalasopara-bhajan-mandali" />
+  <title>Shri Krishna Bhajan Mandli - Vasai Virar Nalasopara</title>
+  <meta name="description" content="Shri Krishna Bhajan Mandli organizes Bhajan Sandhya, Kirtan & Satsang, Mata ki Chowki, Shivcharcha, Awasani Mata Pooja, Sundarkand and religious events in Vasai, Virar, Nalasopara, Maharashtra. Book us for spiritual programs and devotional gatherings.">
 
-  <!-- Schema Markup for Google -->
+  <!-- ✅ Local Business Schema for Google -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "MusicGroup",
+    "@type": "PerformingGroup",
     "name": "Shri Krishna Bhajan Mandli",
-    "alternateName": "Vasai Nalasopara Bhajan Mandali Maharashtra",
-    "url": "https://yourwebsite.com",
-    "logo": "https://yourwebsite.com/logo.png",
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+91-9322335235",
-      "contactType": "Booking"
+    "alternateName": "Shri Krishna Bhajan Mandali",
+    "url": "https://your-website-link.com",
+    "logo": "https://your-website-link.com/Krishna.jpg",
+    "description": "A devotional group dedicated to Bhajan Sandhya, Kirtan & Satsang, Mata ki Chowki, Shivcharcha, Awasani Mata Pooja, Sundarkand and spiritual gatherings in Vasai, Virar, Nalasopara, Maharashtra.",
+    "telephone": "+919322335235",
+    "email": "Kavitashukla1059@gmail.com",
+    "areaServed": {
+      "@type": "Place",
+      "name": "Vasai, Virar, Nalasopara, Maharashtra"
     },
+    "sameAs": [
+      "https://wa.me/919322335235",
+      "mailto:Kavitashukla1059@gmail.com"
+    ],
     "address": {
       "@type": "PostalAddress",
-      "addressLocality": "Vasai Nalasopara",
+      "addressLocality": "Vasai Virar Nalasopara",
       "addressRegion": "Maharashtra",
-      "addressCountry": "IN"
+      "addressCountry": "India"
     }
   }
   </script>
 
-  <link rel="stylesheet" href="style.css">
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; background:#fff8f0; color:#333; }
-    header { background:#ff6600; color:white; padding:20px 10px; text-align:center; }
-    header h1 { margin:0; font-size:28px; }
-    nav a { margin:0 15px; color:white; text-decoration:none; font-weight:bold; }
-    nav a:hover { text-decoration:underline; }
-
-    section { padding:40px 20px; max-width:1000px; margin:auto; }
-    h2 { color:#ff6600; text-align:center; margin-bottom:20px; }
-    ul { list-style:none; padding:0; }
-    ul li { padding:8px; font-size:18px; }
-    .gallery img { width:45%; margin:10px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.2); }
-    .gallery { text-align:center; }
-
-    footer { background:#222; color:white; text-align:center; padding:15px; margin-top:30px; }
-
-    /* Buttons */
-    .btn {
-      background-color: #ff6600;
-      color: white;
-      border: none;
-      padding: 12px 25px;
-      border-radius: 12px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .btn:hover { background-color: #e65c00; }
-
-    /* Modal */
-    @keyframes fadeIn {
-      from {opacity:0; transform:translateY(-20px);}
-      to {opacity:1; transform:translateY(0);}
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    h2 { color: darkred; }
+    section { padding: 20px; }
+    .btn { background: darkred; color: white; padding: 12px 20px; border: none; border-radius: 8px; cursor: pointer; }
+    .btn:hover { background: maroon; }
+    #eventModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); }
+    #eventModal .modal-content { background: #fff; margin: 10% auto; padding: 20px; width: 90%; max-width: 500px; border-radius: 10px; }
+    input, select { width: 100%; padding: 10px; margin-bottom: 12px; border-radius: 8px; border: 1px solid #ccc; }
+    .close { float: right; font-size: 20px; cursor: pointer; color: red; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>🌸 Shri Krishna Bhajan Mandli 🌸</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
 
-  <section id="about">
+  <!-- About Us -->
+  <section id="about-us">
     <h2>About Us</h2>
-    <p>Shri Krishna Bhajan Mandli is a devotional group based in <strong>Vasai Nalasopara, Maharashtra</strong>. We bring people closer to the divine through soulful bhajans, kirtans, satsangs, and spiritual gatherings. With melodious voices and heartfelt devotion, we create a divine atmosphere for temples, homes, and events across India.</p>
-    <p>🙏 श्री कृष्ण भजन मंडली - भावपूर्ण भजनों, कीर्तनों, सत्संगों और आध्यात्मिक समागमों के माध्यम से भगवान कृष्ण के दिव्य संदेश के प्रसार हेतु समर्पित एक भक्ति समूह।</p>
+    <p>
+      Shri Krishna Bhajan Mandli is a devotional group dedicated to spreading the
+      message of love, faith, and devotion through soulful Bhajans and Kirtans.
+      We organize spiritual programs such as <strong>Bhajan Sandhya, Kirtan & Satsang,
+      Mata Ki Chowki, Shivcharcha, Awasani Mata Pooja, Sundarkand</strong>
+      and other religious gatherings across <strong>Vasai, Virar, Nalasopara</strong>
+      and nearby areas in Maharashtra.
+    </p>
+    <p>
+      Our mission is to bring communities together in devotion, creating moments of
+      peace, positivity, and spiritual connection.
+    </p>
   </section>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>🎶 Bhajan Sandhya Programs</li>
-      <li>🎵 Kirtan & Satsang</li>
-      <li>🙏 Special Event Performances</li>
-      <li>🌸 Religious Gatherings</li>
-      <li>🎵 Mata ki Chouki</li>
-      <li>🌸 Shivcharcha</li>
-      <li>🎵 Awasani Maata Pooja</li>
-      <li>🙏 Sundarkand</li>
+  <!-- Service Areas -->
+  <section id="service-areas">
+    <h2>Our Service Areas</h2>
+    <p>We proudly organize devotional programs and events in the following areas:</p>
+    <ul style="list-style-type: '🌸 '; line-height: 1.8;">
+      <li>Vasai</li>
+      <li>Virar</li>
+      <li>Nalasopara</li>
+      <li>Nearby areas in Palghar & Thane District</li>
     </ul>
   </section>
 
-  <section id="gallery" class="gallery">
-    <h2>Gallery</h2>
-    <img src="Krishna.jpg" alt="Krishna Bhajan Mandli">
-    <img src="Background.jpg" alt="Devotional Event">
+  <!-- Booking Button -->
+  <section style="text-align: center;">
+    <button class="btn" id="openForm">Book Us for Event</button>
   </section>
 
-  <section id="contact" class="contact">
-    <h2>Contact Us</h2>
-    <p>📞 Phone: <b>+91 9322335235</b></p>
-    <p>📱 WhatsApp: <b>+91 9322335235</b></p>
-    <p>📧 Email: <b>kavitashukla1059@gmail.com</b></p>
-
-    <!-- Book for Event Button -->
-    <div style="text-align:center; margin-top:20px;">
-      <button class="btn" id="bookBtn">Book Us for Event</button>
-    </div>
-  </section>
-
-  <!-- Modal Form -->
-  <div id="eventFormModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:1000;">
-    <div style="background: url('https://i.ibb.co/ZYW3VTp/krishna-bg.jpg') no-repeat center/cover; padding:30px; border-radius:20px; width:90%; max-width:400px; position:relative; box-shadow:0 10px 25px rgba(0,0,0,0.4); animation:fadeIn 0.4s ease; font-family:'Arial', sans-serif; backdrop-filter: blur(5px);">
-      <span id="closeModal" style="position:absolute; top:10px; right:15px; cursor:pointer; font-weight:bold; font-size:22px; color:#ffcc00;">&times;</span>
-      
-      <div style="text-align:center; margin-bottom:20px; background:rgba(255,255,255,0.7); padding:10px; border-radius:12px;">
-        <img src="Flute.jpg" alt="Krishna Flute" style="width:50px; margin-bottom:10px;">
-        <h2 style="color:#ff6600; margin:0;">Shri Krishna Bhajan Mandli</h2>
-        <p style="color:#555;">Book Your Event with Us</p>
-      </div>
-      
-      <form id="eventForm" style="background:rgba(255,255,255,0.85); padding:15px; border-radius:12px;">
+  <!-- Booking Form Modal -->
+  <div id="eventModal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2>Book an Event</h2>
+      <form id="eventForm">
         <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required placeholder="Enter your name" style="width:100%; padding:10px; margin-bottom:12px; border-radius:8px; border:1px solid #ccc;"><br>
+        <input type="text" id="name" name="name" required><br>
 
         <label for="phone">Phone Number:</label><br>
-        <input type="tel" id="phone" name="phone" required placeholder="Enter phone number" style="width:100%; padding:10px; margin-bottom:12px; border-radius:8px; border:1px solid #ccc;"><br>
+        <input type="tel" id="phone" name="phone" required><br>
 
         <label for="event">Event:</label><br>
-        <input type="text" id="event" name="event" required placeholder="Enter event name" value="Bhajan" style="width:100%; padding:10px; margin-bottom:12px; border-radius:8px; border:1px solid #ccc;"><br>
+        <input type="text" id="event" name="event" value="Bhajan" required><br>
 
         <label for="category">Category:</label><br>
-        <select id="category" name="category" required style="width:100%; padding:10px; margin-bottom:15px; border-radius:8px; border:1px solid #ccc;">
-          <option value="" disabled selected>Select Category</option>
-          <option value="Bhajan Sandhya Programs">Bhajan Sandhya Programs</option>
-          <option value="Kirtan & Satsang">Kirtan & Satsang</option>
-          <option value="Mata ki chouki">Mata ki chouki</option>
-          <option value="Shivcharcha">Shivcharcha</option>
-          <option value="Awasani maata pooja">Awasani maata pooja</option>
-          <option value="Sundarkand">Sundarkand</option>
-          <option value="Special Event Performances and Religious Gatherings">Special Event Performances and Religious Gatherings</option>
+        <select id="category" name="category" required>
+          <option value="">-- Select Category --</option>
+          <option>Bhajan Sandhya Programs</option>
+          <option>Kirtan & Satsang</option>
+          <option>Mata ki Chowki</option>
+          <option>Shivcharcha</option>
+          <option>Awasani Mata Pooja</option>
+          <option>Sundarkand</option>
+          <option>Special Event Performances and Religious Gatherings</option>
         </select><br>
 
-        <button type="submit" class="btn" style="width:100%;">Submit</button>
+        <button type="submit" class="btn">Submit</button>
       </form>
     </div>
   </div>
 
-  <footer>
-    <p>© 2025 Shri Krishna Bhajan Mandli | Vasai Nalasopara, Maharashtra | All Rights Reserved</p>
-  </footer>
+  <!-- Contact Us -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p><strong>Phone / WhatsApp:</strong> <a href="https://wa.me/919322335235" target="_blank">+91 9322335235</a></p>
+    <p><strong>Email:</strong> <a href="mailto:Kavitashukla1059@gmail.com">Kavitashukla1059@gmail.com</a></p>
+    <p><strong>Location:</strong> Vasai - Virar - Nalasopara, Maharashtra</p>
+    <a href="https://wa.me/919322335235?text=Hello%20Shri%20Krishna%20Bhajan%20Mandli%2C%20I%20want%20to%20book%20an%20event" 
+       target="_blank" 
+       style="display:inline-block; padding:12px 20px; background:#25d366; color:white; border-radius:8px; text-decoration:none; font-weight:bold;">
+       📲 Book Us on WhatsApp
+    </a>
+  </section>
 
+  <!-- Script -->
   <script>
-    const bookBtn = document.getElementById('bookBtn');
-    const modal = document.getElementById('eventFormModal');
-    const closeModal = document.getElementById('closeModal');
-    const form = document.getElementById('eventForm');
+    const modal = document.getElementById("eventModal");
+    const openForm = document.getElementById("openForm");
+    const closeModal = document.getElementById("closeModal");
+    const form = document.getElementById("eventForm");
 
-    bookBtn.onclick = () => modal.style.display = 'flex';
-    closeModal.onclick = () => modal.style.display = 'none';
-    window.onclick = (e) => { if(e.target == modal) modal.style.display='none'; }
+    openForm.onclick = () => modal.style.display = "block";
+    closeModal.onclick = () => modal.style.display = "none";
+    window.onclick = (event) => { if (event.target == modal) modal.style.display = "none"; }
 
     form.onsubmit = (e) => {
       e.preventDefault();
-      const name = document.getElementById('name').value;
-      const phone = document.getElementById('phone').value;
-      const eventName = document.getElementById('event').value;
-      const category = document.getElementById('category').value;
-
-      const message = `Booking Request:%0AName: ${name}%0APhone: ${phone}%0AEvent: ${eventName}%0ACategory: ${category}`;
-      const whatsappNumber = '919322335235';
-      window.open(`https://wa.me/${whatsappNumber}?text=${message}`, '_blank');
-      modal.style.display = 'none';
+      const name = document.getElementById("name").value;
+      const phone = document.getElementById("phone").value;
+      const eventName = document.getElementById("event").value;
+      const category = document.getElementById("category").value;
+      const msg = `New Booking Request%0A----------------------%0AName: ${name}%0APhone: ${phone}%0AEvent: ${eventName}%0ACategory: ${category}`;
+      window.open(`https://wa.me/919322335235?text=${msg}`, "_blank");
+      modal.style.display = "none";
       form.reset();
     }
   </script>
+
 </body>
 </html>
