--- a/index.html
+++ b/index.html
@@ -1,156 +1,174 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shri Krishna Bhajan Mandli - Vasai Virar Nalasopara</title>
-  <meta name="description" content="Shri Krishna Bhajan Mandli organizes Bhajan Sandhya, Kirtan & Satsang, Mata ki Chowki, Shivcharcha, Awasani Mata Pooja, Sundarkand and religious events in Vasai, Virar, Nalasopara, Maharashtra. Book us for spiritual programs and devotional gatherings.">
-
-  <!-- ✅ Local Business Schema for Google -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "PerformingGroup",
-    "name": "Shri Krishna Bhajan Mandli",
-    "alternateName": "Shri Krishna Bhajan Mandali",
-    "url": "https://your-website-link.com",
-    "logo": "https://your-website-link.com/Krishna.jpg",
-    "description": "A devotional group dedicated to Bhajan Sandhya, Kirtan & Satsang, Mata ki Chowki, Shivcharcha, Awasani Mata Pooja, Sundarkand and spiritual gatherings in Vasai, Virar, Nalasopara, Maharashtra.",
-    "telephone": "+919322335235",
-    "email": "Kavitashukla1059@gmail.com",
-    "areaServed": {
-      "@type": "Place",
-      "name": "Vasai, Virar, Nalasopara, Maharashtra"
-    },
-    "sameAs": [
-      "https://wa.me/919322335235",
-      "mailto:Kavitashukla1059@gmail.com"
-    ],
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Vasai Virar Nalasopara",
-      "addressRegion": "Maharashtra",
-      "addressCountry": "India"
-    }
-  }
-  </script>
-
+  <title>Shri Krishna Bhajan Mandli - Vasai Nalasopara Maharashtra</title>
+  <meta name="description" content="Shri Krishna Bhajan Mandli – Devotional group from Vasai Nalasopara, Maharashtra. Available for Bhajan Sandhya, Kirtan, Satsang, Mata ki Chouki, Shivcharcha, Sundarkand, and spiritual gatherings. Contact: +919322335235">
+  <meta name="keywords" content="Vasai Bhajan Mandali, Nalasopara Bhajan Mandali, Virar Bhajan Mandali, Shri Krishna Bhajan Mandli Maharashtra, Bhajan Sandhya Vasai, Kirtan Satsang Maharashtra, Mata ki Chouki Vasai, Sundarkand Vasai">
+  <meta name="author" content="Shri Krishna Bhajan Mandli">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    h2 { color: darkred; }
-    section { padding: 20px; }
-    .btn { background: darkred; color: white; padding: 12px 20px; border: none; border-radius: 8px; cursor: pointer; }
-    .btn:hover { background: maroon; }
-    #eventModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); }
-    #eventModal .modal-content { background: #fff; margin: 10% auto; padding: 20px; width: 90%; max-width: 500px; border-radius: 10px; }
-    input, select { width: 100%; padding: 10px; margin-bottom: 12px; border-radius: 8px; border: 1px solid #ccc; }
-    .close { float: right; font-size: 20px; cursor: pointer; color: red; }
+    body { margin:0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:#fffdf9; color:#333; }
+    header { background:#ff6600; color:white; padding:15px 20px; position:sticky; top:0; z-index:100; display:flex; align-items:center; justify-content:space-between; }
+    header h1 { margin:0; font-size:22px; }
+    nav ul { list-style:none; margin:0; padding:0; display:flex; }
+    nav ul li { position:relative; }
+    nav ul li a { color:white; padding:10px 15px; display:block; text-decoration:none; font-weight:500; }
+    nav ul li a:hover { background:#e65c00; border-radius:6px; }
+    nav ul li ul { display:none; position:absolute; background:#ff6600; top:40px; left:0; min-width:180px; border-radius:6px; overflow:hidden; }
+    nav ul li:hover ul { display:block; }
+    nav ul li ul li a { padding:10px; }/* Hero Banner */
+.hero { position:relative; height:80vh; background:url('https://i.ibb.co/q9yXJ5v/artistic-krishna-wallpaper.jpg') center/cover no-repeat; display:flex; justify-content:center; align-items:center; }
+.hero-overlay { position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); }
+.hero-content { position:relative; color:white; text-align:center; padding:20px; }
+.hero-content h1 { font-size:48px; margin-bottom:20px; text-shadow:2px 2px 8px #000; }
+.hero-content p { font-size:20px; margin-bottom:30px; text-shadow:1px 1px 6px #000; }
+
+section { padding:50px 20px; max-width:1100px; margin:auto; }
+h2 { text-align:center; color:#ff6600; margin-bottom:20px; }
+.services-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
+.service-card { background:#fff; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); text-align:center; }
+.service-card i { font-size:35px; color:#ff6600; margin-bottom:10px; }
+
+.gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:15px; }
+.gallery-grid img { width:100%; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.15); }
+
+.testimonial { background:#fff7f0; padding:20px; margin:15px 0; border-left:5px solid #ff6600; border-radius:8px; }
+.testimonial p { margin:0 0 10px; }
+.testimonial strong { color:#ff6600; }
+
+footer { background:#222; color:white; text-align:center; padding:20px; }
+.btn { background:#ff6600; color:white; border:none; padding:12px 25px; border-radius:8px; cursor:pointer; font-weight:600; transition:0.3s; }
+.btn:hover { background:#e65c00; }
+
+/* Modal */
+#eventFormModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:2000; }
+.modal-content { background:#fff; padding:25px; border-radius:15px; width:90%; max-width:400px; animation:fadeIn 0.3s ease; position:relative; }
+@keyframes fadeIn { from{opacity:0; transform:translateY(-20px);} to{opacity:1; transform:translateY(0);} }
+.close { position:absolute; top:10px; right:15px; cursor:pointer; font-size:20px; color:#ff6600; }
+input, select { width:100%; padding:10px; margin:8px 0 15px; border:1px solid #ccc; border-radius:8px; }
+
   </style>
 </head>
 <body>
-
-  <!-- About Us -->
-  <section id="about-us">
+  <header>
+    <h1>🌸 Shri Krishna Bhajan Mandli</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services ▾</a>
+          <ul>
+            <li><a href="#services">Bhajan Sandhya</a></li>
+            <li><a href="#services">Kirtan & Satsang</a></li>
+            <li><a href="#services">Mata ki Chowki</a></li>
+            <li><a href="#services">Sundarkand</a></li>
+          </ul>
+        </li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#areas">Service Areas</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>  <!-- Hero Banner -->  <section class="hero">
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
+      <h1>Shri Krishna Bhajan Mandli</h1>
+      <p>Devotional Bhajans, Kirtans & Satsangs in Vasai–Virar–Nalasopara</p>
+      <button class="btn" id="bookBtn">Book Us for Event</button>
+    </div>
+  </section>  <section id="about">
     <h2>About Us</h2>
-    <p>
-      Shri Krishna Bhajan Mandli is a devotional group dedicated to spreading the
-      message of love, faith, and devotion through soulful Bhajans and Kirtans.
-      We organize spiritual programs such as <strong>Bhajan Sandhya, Kirtan & Satsang,
-      Mata Ki Chowki, Shivcharcha, Awasani Mata Pooja, Sundarkand</strong>
-      and other religious gatherings across <strong>Vasai, Virar, Nalasopara</strong>
-      and nearby areas in Maharashtra.
-    </p>
-    <p>
-      Our mission is to bring communities together in devotion, creating moments of
-      peace, positivity, and spiritual connection.
-    </p>
-  </section>
-
-  <!-- Service Areas -->
-  <section id="service-areas">
-    <h2>Our Service Areas</h2>
-    <p>We proudly organize devotional programs and events in the following areas:</p>
-    <ul style="list-style-type: '🌸 '; line-height: 1.8;">
-      <li>Vasai</li>
-      <li>Virar</li>
-      <li>Nalasopara</li>
-      <li>Nearby areas in Palghar & Thane District</li>
+    <p style="text-align:center; max-width:800px; margin:auto;">Shri Krishna Bhajan Mandli is a devotional group from <strong>Vasai, Virar, Nalasopara</strong>, Maharashtra. We bring divine bliss through soulful Bhajans, Kirtans, Satsangs, and spiritual gatherings. With melodious voices and heartfelt devotion, we create an atmosphere of peace and spirituality at temples, homes, and community events.</p>
+  </section>  <section id="services">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service-card"><i class="fa-solid fa-music"></i><h3>Bhajan Sandhya</h3></div>
+      <div class="service-card"><i class="fa-solid fa-dharmachakra"></i><h3>Kirtan & Satsang</h3></div>
+      <div class="service-card"><i class="fa-solid fa-hand-holding-heart"></i><h3>Mata ki Chowki</h3></div>
+      <div class="service-card"><i class="fa-solid fa-om"></i><h3>Shivcharcha</h3></div>
+      <div class="service-card"><i class="fa-solid fa-seedling"></i><h3>Awasani Mata Pooja</h3></div>
+      <div class="service-card"><i class="fa-solid fa-book-open"></i><h3>Sundarkand</h3></div>
+      <div class="service-card"><i class="fa-solid fa-people-group"></i><h3>Special Gatherings</h3></div>
+    </div>
+  </section>  <section id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="https://source.unsplash.com/600x400/?krishna,bhajan" alt="Bhajan Event">
+      <img src="https://source.unsplash.com/600x400/?temple,india" alt="Temple Program">
+      <img src="https://source.unsplash.com/600x400/?devotional,music" alt="Devotional Music">
+      <img src="https://source.unsplash.com/600x400/?indian,culture" alt="Cultural Event">
+    </div>
+  </section>  <section id="areas">
+    <h2>Service Areas</h2>
+    <p style="text-align:center; max-width:700px; margin:auto;">We proudly organize devotional events in the following regions of Maharashtra:</p>
+    <ul style="max-width:400px; margin:20px auto; line-height:1.8; font-size:18px;">
+      <li>🌸 Vasai</li>
+      <li>🌸 Virar</li>
+      <li>🌸 Nalasopara</li>
+      <li>🌸 Nearby areas of Palghar & Thane</li>
     </ul>
-  </section>
-
-  <!-- Booking Button -->
-  <section style="text-align: center;">
-    <button class="btn" id="openForm">Book Us for Event</button>
-  </section>
-
-  <!-- Booking Form Modal -->
-  <div id="eventModal">
+  </section>  <section id="testimonials">
+    <h2>Testimonials</h2>
+    <div class="testimonial">
+      <p>“Their bhajans filled our home with peace and positivity. Truly divine experience.”</p>
+      <strong>- Meera Sharma, Vasai</strong>
+    </div>
+    <div class="testimonial">
+      <p>“Excellent performance during our Mata ki Chowki. The whole mandli sang with such devotion.”</p>
+      <strong>- Rajesh Verma, Virar</strong>
+    </div>
+    <div class="testimonial">
+      <p>“They made our Sundarkand path unforgettable. Everyone felt spiritually uplifted.”</p>
+      <strong>- Kavita Joshi, Nalasopara</strong>
+    </div>
+  </section>  <section id="contact">
+    <h2>Contact Us</h2>
+    <p style="text-align:center;">📞 <b>+91 9322335235</b> | 📱 WhatsApp Available | 📧 kavitashukla1059@gmail.com</p>
+  </section>  <!-- Modal Form -->  <div id="eventFormModal">
     <div class="modal-content">
       <span class="close" id="closeModal">&times;</span>
-      <h2>Book an Event</h2>
+      <h2 style="text-align:center; color:#ff6600;">Book Your Event</h2>
       <form id="eventForm">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br>
-
-        <label for="phone">Phone Number:</label><br>
-        <input type="tel" id="phone" name="phone" required><br>
-
-        <label for="event">Event:</label><br>
-        <input type="text" id="event" name="event" value="Bhajan" required><br>
-
-        <label for="category">Category:</label><br>
+        <input type="text" id="name" name="name" required placeholder="Enter your name">
+        <input type="tel" id="phone" name="phone" required placeholder="Enter phone number">
+        <input type="text" id="event" name="event" required value="Bhajan">
         <select id="category" name="category" required>
-          <option value="">-- Select Category --</option>
-          <option>Bhajan Sandhya Programs</option>
+          <option value="" disabled selected>Select Category</option>
+          <option>Bhajan Sandhya</option>
           <option>Kirtan & Satsang</option>
           <option>Mata ki Chowki</option>
           <option>Shivcharcha</option>
           <option>Awasani Mata Pooja</option>
           <option>Sundarkand</option>
-          <option>Special Event Performances and Religious Gatherings</option>
-        </select><br>
-
-        <button type="submit" class="btn">Submit</button>
+          <option>Special Gatherings</option>
+        </select>
+        <button type="submit" class="btn" style="width:100%;">Submit</button>
       </form>
     </div>
-  </div>
+  </div>  <footer>
+    <p>© 2025 Shri Krishna Bhajan Mandli | Vasai - Virar - Nalasopara, Maharashtra</p>
+  </footer>  <script>
+    const bookBtn = document.getElementById('bookBtn');
+    const modal = document.getElementById('eventFormModal');
+    const closeModal = document.getElementById('closeModal');
+    const form = document.getElementById('eventForm');
 
-  <!-- Contact Us -->
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p><strong>Phone / WhatsApp:</strong> <a href="https://wa.me/919322335235" target="_blank">+91 9322335235</a></p>
-    <p><strong>Email:</strong> <a href="mailto:Kavitashukla1059@gmail.com">Kavitashukla1059@gmail.com</a></p>
-    <p><strong>Location:</strong> Vasai - Virar - Nalasopara, Maharashtra</p>
-    <a href="https://wa.me/919322335235?text=Hello%20Shri%20Krishna%20Bhajan%20Mandli%2C%20I%20want%20to%20book%20an%20event" 
-       target="_blank" 
-       style="display:inline-block; padding:12px 20px; background:#25d366; color:white; border-radius:8px; text-decoration:none; font-weight:bold;">
-       📲 Book Us on WhatsApp
-    </a>
-  </section>
-
-  <!-- Script -->
-  <script>
-    const modal = document.getElementById("eventModal");
-    const openForm = document.getElementById("openForm");
-    const closeModal = document.getElementById("closeModal");
-    const form = document.getElementById("eventForm");
-
-    openForm.onclick = () => modal.style.display = "block";
-    closeModal.onclick = () => modal.style.display = "none";
-    window.onclick = (event) => { if (event.target == modal) modal.style.display = "none"; }
+    bookBtn.onclick = () => modal.style.display = 'flex';
+    closeModal.onclick = () => modal.style.display = 'none';
+    window.onclick = (e) => { if(e.target == modal) modal.style.display='none'; }
 
     form.onsubmit = (e) => {
       e.preventDefault();
-      const name = document.getElementById("name").value;
-      const phone = document.getElementById("phone").value;
-      const eventName = document.getElementById("event").value;
-      const category = document.getElementById("category").value;
-      const msg = `New Booking Request%0A----------------------%0AName: ${name}%0APhone: ${phone}%0AEvent: ${eventName}%0ACategory: ${category}`;
-      window.open(`https://wa.me/919322335235?text=${msg}`, "_blank");
-      modal.style.display = "none";
+      const name = document.getElementById('name').value;
+      const phone = document.getElementById('phone').value;
+      const eventName = document.getElementById('event').value;
+      const category = document.getElementById('category').value;
+      const message = `Booking Request:%0AName: ${name}%0APhone: ${phone}%0AEvent: ${eventName}%0ACategory: ${category}`;
+      const whatsappNumber = '919322335235';
+      window.open(`https://wa.me/${whatsappNumber}?text=${message}`, '_blank');
+      modal.style.display = 'none';
       form.reset();
     }
-  </script>
-
-</body>
+  </script></body>
 </html>
